
 * Issue 86: pyftpdlib now reports all ls and MDTM timestamps as GMT times,
   as recommended in RFC-3659.  A FTPHandler.use_gmt_times attributed has been
   added and can be set to False in case local times are desired instead.

 * Issue 124: pyftpdlib now accepts command line options to configure a stand
   alone anonymous FTP server when running pyftpdlib with python's -m option.

 * Issue 128: files and directories owner and group names and os.readlink are 
   now resolved via AbstractedFS methods instead of in format_list().

 * Issue 129: added 3 new callbacks to FTPHandler class: 
   on_incomplete_file_sent(), on_incomplete_file_received() and on_login().

 * Issue 130: added UnixAuthorizer and WindowsAuthorizer classes defined in the
   new pyftpdlib.contrib.authorizers module.

 * Issue 131: pyftpdlib is now able to serve both IPv4 and IPv6 at the same
   time by using a single socket.

 * Issue 134: enabled TCP_NODELAY socket option for the FTP command channels
   resulting in pyftpdlib being twice faster.

 * Issue 135: Python 2.3 support has been removed.

Bugfixes:

 * Issue #120: an ActiveDTP() instance is not garbage collected in case a
   client issuing PORT disconnects before establishing the data connection.

 * Issue #122: a wrong variable name was used in AbstractedFS.validpath method.

 * Issue #123: PORT command doesn't bind to correct address in case an alias
   is created for the local network interface.

Major API changes since 0.5.2

 * removed support for Python 2.3.

 * all classes are now new-style classes

 * FTPHandler.use_gmt_times class attribute has been added.

 * FTPHandler.tcp_no_delay class attribute has been added.

 * FTPHandler.proto_cmds class attribute has been added.  The FTPHandler class 
   no longer relies on "ftpserver.proto_cmds" global dictionary but on
   "ftphandler.FTPHandler.proto_cmds" instead.

 * FTPHandler class has 3 new methods:
   on_incomplete_file_sent()
   on_incomplete_file_received()
   on_login()
