@@ -19,6 +19,11 @@ Enhancements:
  * Issue 124: pyftpdlib now accepts command line options to configure a stand
    alone anonymous FTP server when running pyftpdlib with python's -m option.
 
+ * Issue 127: added FTPHandler.masquerade_address_map option which allows you 
+   to define multiple 1 to 1 mappings in case you run a FTP server with 
+   multiple private IP addresses behind a NAT firewall with multiple public
+   IP addresses. 
+
  * Issue 128: files and directories owner and group names and os.readlink are 
    now resolved via AbstractedFS methods instead of in format_list().
 
@@ -55,6 +60,8 @@ Major API changes since 0.5.2
  * FTPHandler.use_gmt_times class attribute has been added.
 
  * FTPHandler.tcp_no_delay class attribute has been added.
+
+ * FTPHandler.masquerade_address_map class attribute has been added.
 
  * FTPHandler.proto_cmds class attribute has been added.  The FTPHandler class 
    no longer relies on "ftpserver.proto_cmds" global dictionary but on
